fix: z-index

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -15,7 +15,7 @@
     rgba(255, 199, 0, 1) 35%,
     rgba(225, 135, 53, 1) 100%
   );
-  z-index: 100;
+  z-index: 1000;
 }
 
 .logo {
