--- a/src/app/modules/list/components/card/card.component.scss
+++ b/src/app/modules/list/components/card/card.component.scss
@@ -17,7 +17,7 @@
   margin-top: 15px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  z-index: 1000;
+  z-index: 100;
 }
 
 .card:hover {
@@ -58,7 +58,7 @@ img {
   position: absolute;
   bottom: -10px;
   left: 10px;
-  z-index: 1000;
+  z-index: 100;
   color: #fff;
   font-size: 22px;
 }
